--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>Hakkımızda</h1>
-								<p class="mb-4">"AnadoluDokuma" zengin kültürel mirası ve el işçiliğiyle öne çıkan Türk halılarını sunan bir online mağazadır. Anadolu'nun dokuma geleneğini modern tasarımlarla birleştirerek müşterilere benzersiz ve kaliteli halıları ulaştırarak evlerine sıcaklık ve estetik katmayı hedeflemektedir.</p>
+								<p class="mb-4">"AnadoluDokuma" biz zengin kültürel mirası ve el işçiliğiyle öne çıkan Türk halılarını sunan bir online mağazadır. Anadolu'nun dokuma geleneğini modern tasarımlarla birleştirerek müşterilere benzersiz ve kaliteli halıları ulaştırarak evlerine sıcaklık ve estetik katmayı hedeflemektedir.</p>
 								<p><a href="" class="btn btn-secondary me-2">Şimdi Al</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
