hakkımızda sayfası güncellendi

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,4 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
+
 <!doctype html>
 <html lang="en">
 	<%- include ('partials/_header') -%>
@@ -19,14 +13,14 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>About Us</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<h1>Hakkımızda</h1>
+								<p class="mb-4">"AnadoluDokuma" zengin kültürel mirası ve el işçiliğiyle öne çıkan Türk halılarını sunan bir online mağazadır. Anadolu'nun dokuma geleneğini modern tasarımlarla birleştirerek müşterilere benzersiz ve kaliteli halıları ulaştırarak evlerine sıcaklık ve estetik katmayı hedeflemektedir.</p>
+								<p><a href="" class="btn btn-secondary me-2">Şimdi Al</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="/images/couch.png" class="img-fluid">
+								<img src="/images/mainproduct.png" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -41,8 +35,8 @@
 			<div class="container">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
-						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+						<h2 class="section-title">Neden Bizi Seçmelisiniz?</h2>
+						<p>Bizi seçmelisiniz çünkü hızlı, ücretsiz kargo, kullanımı kolay alışveriş, 7/24 destek ve sorunsuz iade süreçleri ile müşteri memnuniyetini ön planda tutuyoruz.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -50,8 +44,8 @@
 									<div class="icon">
 										<img src="/images/truck.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Fast &amp; Hızlı ve Ücretsiz Kargo</h3>
+									<p>Bizi tercih ettiğinizde hızlı ve ücretsiz kargo hizmetiyle tanışın. Satın aldığınız ürünlerin ekstra kargo ücreti olmadan size hızlı bir şekilde ulaşmasını önemsiyoruz.</p>
 								</div>
 							</div>
 
@@ -60,8 +54,8 @@
 									<div class="icon">
 										<img src="/images/bag.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Kolay Alışveriş</h3>
+									<p>Bizimle alışverişinizi kolaylaştırın. Kullanıcı dostu arayüzümüz ve sezgisel tasarımımız sayesinde istediğiniz ürünleri bulmak, seçmek ve satın almak oldukça basit.</p>
 								</div>
 							</div>
 
@@ -70,8 +64,8 @@
 									<div class="icon">
 										<img src="/images/support.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>7/24 Destek</h3>
+									<p>Herhangi bir sorunuz veya endişeniz olduğunda size yardımcı olmak için 7/24 müşteri destek ekibimizle iletişime geçin. Daima hizmetinizde olan destek ekibimiz, ihtiyaç duyduğunuzda size yardımcı olmaktan memnuniyet duyar.</p>
 								</div>
 							</div>
 
@@ -80,8 +74,8 @@
 									<div class="icon">
 										<img src="/images/return.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>Sorunsuz İade İşlemleri</h3>
+									<p>Memnuniyetiniz bizim için önceliktir. Sorunsuz iade politikamızdan faydalanarak, beklentilerinizi karşılamayan ürünleri kolaylıkla iade edebilirsiniz. Alışveriş deneyiminizi mümkün olan en sorunsuz ve stres-free hale getirmek bizim prensibimizdir.</p>
 								</div>
 							</div>
 
@@ -90,7 +84,7 @@
 
 					<div class="col-lg-5">
 						<div class="img-wrap">
-							<img src="/images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
+							<img src="/images/ortam.jpg" alt="Image" class="img-fluid">
 						</div>
 					</div>
 
