--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,10 +1,3 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!doctype html>
 <html lang="en">
 	<%- include ('partials/_header') -%>
@@ -19,7 +12,7 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Shop</h1>
+								<h1>Alışveriş</h1>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -39,8 +32,8 @@
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
+							<img src="images/hali1.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Konya Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
@@ -53,8 +46,8 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
+							<img src="images/hali2.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Bursa Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
@@ -67,8 +60,8 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
+							<img src="images/hali3.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Manisa Halısı</h3>
 							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
@@ -81,8 +74,8 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
+							<img src="images/hali4.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Trabzon Halısı</h3>
 							<strong class="product-price">$43.00</strong>
 
 							<span class="icon-cross">
@@ -96,8 +89,8 @@
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
+							<img src="images/hali5.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Ankara Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
@@ -110,8 +103,8 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
+							<img src="images/hali6.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">İzmir Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
@@ -124,8 +117,8 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
+							<img src="images/hali7.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Kütahya Halısı</h3>
 							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
@@ -138,8 +131,8 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
+							<img src="images/hali8.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Eskişehir Halısı</h3>
 							<strong class="product-price">$43.00</strong>
 
 							<span class="icon-cross">
@@ -187,8 +180,8 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">AnadoluDokuma<span>.</span></a></div>
+						<p class="mb-4"> AnadoluDokuma'nın yaratıcı halı tasarımlarını ve dokuma sanatının zarafetini keşfetmek için sosyal medya hesaplarımızı takip edin! 🌟</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
