--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -152,7 +152,7 @@
         
                       <div class="row">
                         <div class="col-md-12">
-                          <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                          <a href="checkout" class="btn btn-black btn-lg py-3 btn-block">Proceed To Checkout</a>
                         </div>
                       </div>
                     </div>
