--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -152,7 +152,7 @@
 			<div class="container relative">
 
 				<div class="sofa-img">
-					<img src="images/sofa.png" alt="Image" class="img-fluid">
+					<img src="images/klim.png" alt="Image" class="img-fluid">
 				</div>
 
 				<div class="row">
