--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,14 +19,14 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<h1>Isparta Halıları </h1>
+								<p class="mb-4">Isparta halıları, kaliteli malzemeler ve ustalıkla yapılan işçilik</p>
+								<p><a href="" class="btn btn-secondary me-2">Hemen Satın Al </a><a href="#" class="btn btn-white-outline">Daha fazla</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="/images/couch.png" class="img-fluid">
+								<img style="padding: 30px;" src="/images/anahali.png" >
 							</div>
 						</div>
 					</div>
@@ -35,24 +35,24 @@
 		<!-- End Hero Section -->
 
 		<!-- Start Product Section -->
-		<div class="product-section">
+		<div class="product-section mt-5">
 			<div class="container">
 				<div class="row">
 
 					<!-- Start Column 1 -->
 					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-						<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. </p>
-						<p><a href="shop.html" class="btn">Explore</a></p>
+						<h2 class="mb-4 section-title">En çok tercih edilen halı modelleri</h2>
+						<p class="mb-4">Klasik Anadolu tasarımından daha modern geometrik desenlere kadar birçok farklı Türk halıları...</p>
+						<p><a href="shop.html" class="btn">Daha fazla</a></p>
 					</div> 
 					<!-- End Column 1 -->
 
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="/images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<img src="/images/hali3.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Isparta Halıları</h3>
+							<strong class="product-price">$79.00</strong>
 
 							<span class="icon-cross">
 								<img src="/images/cross.svg" class="img-fluid">
@@ -64,9 +64,9 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="/images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<img src="/images/hali5.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Ardahan Halıları</h3>
+							<strong class="product-price">$66.00</strong>
 
 							<span class="icon-cross">
 								<img src="/images/cross.svg" class="img-fluid">
@@ -78,8 +78,8 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="/images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
+							<img src="/images/hali6.jpg" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Kayseri Halıları</h3>
 							<strong class="product-price">$43.00</strong>
 
 							<span class="icon-cross">
@@ -94,96 +94,7 @@
 		</div>
 		<!-- End Product Section -->
 
-		<!-- Start Why Choose Us Section -->
-		<div class="why-choose-section">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-6">
-						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-
-						<div class="row my-5">
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="/images/truck.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="/images/bag.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="/images/support.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="/images/return.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-5">
-						<div class="img-wrap">
-							<img src="/images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- End Why Choose Us Section -->
-
-		<!-- Start We Help Section -->
-		<div class="we-help-section">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-7 mb-5 mb-lg-0">
-						<div class="imgs-grid">
-							<div class="grid grid-1"><img src="/images/img-grid-1.jpg" alt="Untree.co"></div>
-							<div class="grid grid-2"><img src="/images/img-grid-2.jpg" alt="Untree.co"></div>
-							<div class="grid grid-3"><img src="/images/img-grid-3.jpg" alt="Untree.co"></div>
-						</div>
-					</div>
-					<div class="col-lg-5 ps-lg-5">
-						<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
-
-						<ul class="list-unstyled custom-list my-4">
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-						</ul>
-						<p><a herf="#" class="btn">Explore</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End We Help Section -->
+		
 
 		<!-- Start Popular Product -->
 		<div class="popular-product">
@@ -193,12 +104,12 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="/images/product-1.png" alt="Image" class="img-fluid">
+								<img src="/images/countryhali.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Nordic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>COUNTRY STİLİ</h3>
+								<p>Country dekorasyon; kırsal hayata, çiftlik yaşamına ve dolayısıyla doğaya vurgu yapıyor. Bu nedenle ...</p>
+								<p><a href="#">Daha fazla</a></p>
 							</div>
 						</div>
 					</div>
@@ -206,12 +117,12 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="/images/product-2.png" alt="Image" class="img-fluid">
+								<img src="/images/dekorhali.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Kruzo Aero Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>EKLEKTİK STİLİ</h3>
+								<p>Eklektik stilde farklı dönemlerden ve tarzlardan parçalar uyum içinde bir arada kullanılır. Örneğin klasik bir İran halısı, modern ...</p>
+								<p><a href="#">Daha fazla</a></p>
 							</div>
 						</div>
 					</div>
@@ -219,12 +130,12 @@
 					<div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
 						<div class="product-item-sm d-flex">
 							<div class="thumbnail">
-								<img src="/images/product-3.png" alt="Image" class="img-fluid">
+								<img src="/images/retrohali.jpg" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Ergonomic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>RETRO STİLİ</h3>
+								<p>Retro stili, 1960 ve 1970 dönemininden ilham alır., Bu dönemde dokunmuş canlı renklere ve desenlere sahip halılar... </p>
+								<p><a href="#">Daha fazla</a></p>
 							</div>
 						</div>
 					</div>
@@ -265,9 +176,9 @@
 
 												<div class="author-info">
 													<div class="author-pic">
-														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
+														<img src="/images/deniz.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Deniz Dağlı</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
@@ -290,7 +201,7 @@
 													<div class="author-pic">
 														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Asude</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
@@ -313,7 +224,7 @@
 													<div class="author-pic">
 														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Açelya</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
@@ -321,8 +232,6 @@
 										</div>
 									</div>
 								</div> 
-								<!-- END item -->
-
 							</div>
 
 						</div>
@@ -330,63 +239,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Testimonial Slider -->
-
-		<!-- Start Blog Section -->
-		<div class="blog-section">
-			<div class="container">
-				<div class="row mb-5">
-					<div class="col-md-6">
-						<h2 class="section-title">Recent Blog</h2>
-					</div>
-					<div class="col-md-6 text-start text-md-end">
-						<a href="#" class="more">View All Posts</a>
-					</div>
-				</div>
-
-				<div class="row">
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="/images/post-1.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">First Time Home Owner Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="/images/post-2.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-4 mb-4 mb-md-0">
-						<div class="post-entry">
-							<a href="#" class="post-thumbnail"><img src="/images/post-3.jpg" alt="Image" class="img-fluid"></a>
-							<div class="post-content-entry">
-								<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-								<div class="meta">
-									<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- End Blog Section -->	
-
+		
 		<%- include ('partials/_footer') -%>
 
 		<script src="js/bootstrap.bundle.min.js"></script>
