ana sayfa güncellendi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,12 +21,12 @@
 							<div class="intro-excerpt">
 								<h1>Isparta Halıları </h1>
 								<p class="mb-4">Isparta halıları, kaliteli malzemeler ve ustalıkla yapılan işçilik</p>
-								<p><a href="" class="btn btn-secondary me-2">Hemen Satın Al </a><a href="#" class="btn btn-white-outline">Daha fazla</a></p>
+								<p><a href="shop" class="btn btn-secondary me-2">Hemen Satın Al </a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img style="padding: 30px;" src="/images/anahali.png" >
+								<img style="padding: 30px;" src="/images/mainproduct.png" >
 							</div>
 						</div>
 					</div>
