--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -10,22 +10,22 @@
         <div class="collapse navbar-collapse" id="navbarsFurni">
             <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="index">Home</a>
+                    <a class="nav-link" href="index">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop">Shop</a>
+                    <a class="nav-link" href="shop">Mağaza</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about">About us</a>
+                    <a class="nav-link" href="about">Hakkımızda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services">Services</a>
+                    <a class="nav-link" href="services">Servisler</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact">Contact us</a>
+                    <a class="nav-link" href="contact">İletişim</a>
                 </li>
             </ul>
 
