--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -18,14 +18,14 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Contact</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<h1>İletişim</h1>
+								<p class="mb-4">İletişim sayfamız aracılığıyla bizimle kolayca iletişim kurabilir, sorularınızı sorabilir, geri bildirimde bulunabilir ve işbirliği için bize ulaşabilirsiniz.</p>
+								<p><a href="" class="btn btn-secondary me-2">Şimdi Al</a><a href="shop" class="btn btn-white-outline">Keşfet</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
+								<img src="images/mainproduct.png" class="img-fluid">
 							</div>
 						</div>
 					</div>
