--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -12,7 +12,7 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Alışveriş</h1>
+								<h1>Mağaza</h1>
 							</div>
 						</div>
 						<div class="col-lg-7">
