--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
 							<div class="intro-excerpt">
 								<h1>İletişim</h1>
 								<p class="mb-4">İletişim sayfamız aracılığıyla bizimle kolayca iletişim kurabilir, sorularınızı sorabilir, geri bildirimde bulunabilir ve işbirliği için bize ulaşabilirsiniz.</p>
-								<p><a href="" class="btn btn-secondary me-2">Şimdi Al</a><a href="shop" class="btn btn-white-outline">Keşfet</a></p>
+								<p><a href="shop" class="btn btn-secondary me-2">Şimdi Al</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -54,7 +54,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                      <p>AnadoluDokuma Mağazası, İstanbul'da 123 Cadde, Örnek Mahallesi</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -67,7 +67,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>info@yourdomain.com</p>
+                      <p>anadoludokuma@gmail.com</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -90,28 +90,28 @@
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
-                      <label class="text-black" for="fname">First name</label>
+                      <label class="text-black" for="fname">Ad</label>
                       <input type="text" class="form-control" id="fname">
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
-                      <label class="text-black" for="lname">Last name</label>
+                      <label class="text-black" for="lname">Soyad</label>
                       <input type="text" class="form-control" id="lname">
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
+                  <label class="text-black" for="email">Email adresi</label>
                   <input type="email" class="form-control" id="email">
                 </div>
 
                 <div class="form-group mb-5">
-                  <label class="text-black" for="message">Message</label>
+                  <label class="text-black" for="message">Mesaj</label>
                   <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
+                <button type="submit" class="btn btn-primary-hover-outline">Gönder</button>
               </form>
 
             </div>
