--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
 							<div class="intro-excerpt">
 								<h1>Hakkımızda</h1>
 								<p class="mb-4">"AnadoluDokuma" biz zengin kültürel mirası ve el işçiliğiyle öne çıkan Türk halılarını sunan bir online mağazadır. Anadolu'nun dokuma geleneğini modern tasarımlarla birleştirerek müşterilere benzersiz ve kaliteli halıları ulaştırarak evlerine sıcaklık ve estetik katmayı hedeflemektedir.</p>
-								<p><a href="" class="btn btn-secondary me-2">Şimdi Al</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<p><a href="shop" class="btn btn-secondary me-2">Şimdi Al</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
