ödeme sayfası güncellendi

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -107,14 +107,35 @@
 
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-						<img src="/images/deniz.png" class="img-fluid mb-5">
-						<h3 clas><a href="#"><span class="">Deniz</span> Dağlı</a></h3>
+						<img src="/images/person.jpg" class="img-fluid mb-5">
+						<h3 clas><a href="#"><span class="">Deniz</span></a></h3>
             <span class="d-block position mb-4">CEO, Founder, Atty.</span>
             <p>Separated they live in.
             Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 					</div> 
 					<!-- End Column 1 -->
+
+						<!-- Start Column 2 -->
+						<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+							<img src="/images/person.jpg" class="img-fluid mb-5">
+							<h3 clas><a href="#"><span class="">Asude</span></a></h3>
+				<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+				<p>Separated they live in.
+				Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
+						</div> 
+						<!-- End Column 2 -->
+						<!-- Start Column 3 -->
+						<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
+							<img src="/images/person.jpg" class="img-fluid mb-5">
+							<h3 clas><a href="#"><span class="">Açelya</span></a></h3>
+				<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+				<p>Separated they live in.
+				Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
+						</div> 
+						<!-- End Column 2 -->
 
 					
 
