--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -12,7 +12,7 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Checkout</h1>
+								<h1>Ödeme</h1>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -28,60 +28,53 @@
 		      <div class="row mb-5">
 		        <div class="col-md-12">
 		          <div class="border p-4 rounded" role="alert">
-		            Returning customer? <a href="#">Click here</a> to login
+		            Mevcut müşteri misiniz? Giriş yapmak için <a href="#">buraya </a> tıklayın
 		          </div>
 		        </div>
 		      </div>
 		      <div class="row">
 		        <div class="col-md-6 mb-5 mb-md-0">
-		          <h2 class="h3 mb-3 text-black">Billing Details</h2>
+		          <h2 class="h3 mb-3 text-black">Fatura Detayları</h2>
 		          <div class="p-3 p-lg-5 border bg-white">
 		            <div class="form-group">
 		              <label for="c_country" class="text-black">Country <span class="text-danger">*</span></label>
 		              <select id="c_country" class="form-control">
-		                <option value="1">Select a country</option>    
-		                <option value="2">bangladesh</option>    
-		                <option value="3">Algeria</option>    
-		                <option value="4">Afghanistan</option>    
-		                <option value="5">Ghana</option>    
-		                <option value="6">Albania</option>    
-		                <option value="7">Bahrain</option>    
-		                <option value="8">Colombia</option>    
-		                <option value="9">Dominican Republic</option>    
+		                <option value="1">Bir ülke seç</option>    
+		                <option value="2">Azerbaycan</option>    
+		                <option value="3">İngiltere</option>    
+		                <option value="4">Amerika Birleşik Devletleri</option>    
+		                <option value="5">Fransa</option>    
+		                <option value="6">Türkiye</option>    
+		                <option value="7">İran</option>    
+		                <option value="8">Almanya</option>    
+		                <option value="9">İtayla</option>    
 		              </select>
 		            </div>
 		            <div class="form-group row">
 		              <div class="col-md-6">
-		                <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
+		                <label for="c_fname" class="text-black">Ad <span class="text-danger">*</span></label>
 		                <input type="text" class="form-control" id="c_fname" name="c_fname">
 		              </div>
 		              <div class="col-md-6">
-		                <label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
+		                <label for="c_lname" class="text-black">Soyad <span class="text-danger">*</span></label>
 		                <input type="text" class="form-control" id="c_lname" name="c_lname">
 		              </div>
 		            </div>
 
 		            <div class="form-group row">
 		              <div class="col-md-12">
-		                <label for="c_companyname" class="text-black">Company Name </label>
-		                <input type="text" class="form-control" id="c_companyname" name="c_companyname">
-		              </div>
-		            </div>
-
-		            <div class="form-group row">
-		              <div class="col-md-12">
-		                <label for="c_address" class="text-black">Address <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_address" name="c_address" placeholder="Street address">
+		                <label for="c_address" class="text-black">Adres <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" id="c_address" name="c_address" placeholder="Sokak Adresi">
 		              </div>
 		            </div>
 
 		            <div class="form-group mt-3">
-		              <input type="text" class="form-control" placeholder="Apartment, suite, unit etc. (optional)">
+		              <input type="text" class="form-control" placeholder="Apartman, daire, ünite vb. (isteğe bağlı)">
 		            </div>
 
 		            <div class="form-group row">
 		              <div class="col-md-6">
-		                <label for="c_state_country" class="text-black">State / Country <span class="text-danger">*</span></label>
+		                <label for="c_state_country" class="text-black">Devlet / Ülke <span class="text-danger">*</span></label>
 		                <input type="text" class="form-control" id="c_state_country" name="c_state_country">
 		              </div>
 		              <div class="col-md-6">
@@ -92,17 +85,18 @@
 
 		            <div class="form-group row mb-5">
 		              <div class="col-md-6">
-		                <label for="c_email_address" class="text-black">Email Address <span class="text-danger">*</span></label>
+		                <label for="c_email_address" class="text-black">Email Adresi <span class="text-danger">*</span></label>
 		                <input type="text" class="form-control" id="c_email_address" name="c_email_address">
 		              </div>
 		              <div class="col-md-6">
-		                <label for="c_phone" class="text-black">Phone <span class="text-danger">*</span></label>
-		                <input type="text" class="form-control" id="c_phone" name="c_phone" placeholder="Phone Number">
+		                <label for="c_phone" class="text-black">Telefon <span class="text-danger">*</span></label>
+		                <input type="text" class="form-control" id="c_phone" name="c_phone" placeholder="Telefon Numarası">
 		              </div>
 		            </div>
 
 		            <div class="form-group">
-		              <label for="c_create_account" class="text-black" data-bs-toggle="collapse" href="#create_an_account" role="button" aria-expanded="false" aria-controls="create_an_account"><input type="checkbox" value="1" id="c_create_account"> Create an account?</label>
+		              <label for="c_create_account" class="text-black" data-bs-toggle="collapse" href="#create_an_account" role="button" aria-expanded="false" aria-controls="create_an_account"><input type="checkbox" value="1" id="c_create_account"> Yeni bir hesap oluştur?
+					  </label>
 		              <div class="collapse" id="create_an_account">
 		                <div class="py-2 mb-4">
 		                  <p class="mb-3">Create an account by entering the information below. If you are a returning customer please login at the top of the page.</p>
@@ -116,7 +110,7 @@
 
 
 		            <div class="form-group">
-		              <label for="c_ship_different_address" class="text-black" data-bs-toggle="collapse" href="#ship_different_address" role="button" aria-expanded="false" aria-controls="ship_different_address"><input type="checkbox" value="1" id="c_ship_different_address"> Ship To A Different Address?</label>
+		              <label for="c_ship_different_address" class="text-black" data-bs-toggle="collapse" href="#ship_different_address" role="button" aria-expanded="false" aria-controls="ship_different_address"><input type="checkbox" value="1" id="c_ship_different_address"> Farklı bir adrese gönderilsin mi? </label>
 		              <div class="collapse" id="ship_different_address">
 		                <div class="py-2">
 
@@ -167,7 +161,7 @@
 
 		                  <div class="form-group row">
 		                    <div class="col-md-6">
-		                      <label for="c_diff_state_country" class="text-black">State / Country <span class="text-danger">*</span></label>
+		                      <label for="c_diff_state_country" class="text-black">Devlet / Ülke <span class="text-danger">*</span></label>
 		                      <input type="text" class="form-control" id="c_diff_state_country" name="c_diff_state_country">
 		                    </div>
 		                    <div class="col-md-6">
@@ -193,8 +187,8 @@
 		            </div>
 
 		            <div class="form-group">
-		              <label for="c_order_notes" class="text-black">Order Notes</label>
-		              <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control" placeholder="Write your notes here..."></textarea>
+		              <label for="c_order_notes" class="text-black">Sipariş Notları</label>
+		              <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control" placeholder="Sipariş notlarınızı buraya yazın..."></textarea>
 		            </div>
 
 		          </div>
@@ -203,14 +197,14 @@
 
 		          <div class="row mb-5">
 		            <div class="col-md-12">
-		              <h2 class="h3 mb-3 text-black">Coupon Code</h2>
+		              <h2 class="h3 mb-3 text-black">Kupon Kodu</h2>
 		              <div class="p-3 p-lg-5 border bg-white">
 
-		                <label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
+		                <label for="c_code" class="text-black mb-3">Kupon kodunuz varsa girin.</label>
 		                <div class="input-group w-75 couponcode-wrap">
 		                  <input type="text" class="form-control me-2" id="c_code" placeholder="Coupon Code" aria-label="Coupon Code" aria-describedby="button-addon2">
 		                  <div class="input-group-append">
-		                    <button class="btn btn-black btn-sm" type="button" id="button-addon2">Apply</button>
+		                    <button class="btn btn-black btn-sm" type="button" id="button-addon2">Uygula</button>
 		                  </div>
 		                </div>
 
@@ -220,49 +214,46 @@
 
 		          <div class="row mb-5">
 		            <div class="col-md-12">
-		              <h2 class="h3 mb-3 text-black">Your Order</h2>
+		              <h2 class="h3 mb-3 text-black">Siparişiniz</h2>
 		              <div class="p-3 p-lg-5 border bg-white">
 		                <table class="table site-block-order-table mb-5">
 		                  <thead>
-		                    <th>Product</th>
-		                    <th>Total</th>
+		                    <th>Ürün</th>
+		                    <th>Toplam</th>
 		                  </thead>
 		                  <tbody>
 		                    <tr>
-		                      <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-		                      <td>$250.00</td>
+		                      <td>Konya Halısı <strong class="mx-2">x</strong> 1</td>
+		                      <td>$50.00</td>
+		                    </tr>
+		                
+		                    <tr>
+		                      <td class="text-black font-weight-bold"><strong>Sipariş Ara Toplam</strong></td>
+		                      <td class="text-black">$75.00</td>
 		                    </tr>
 		                    <tr>
-		                      <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-		                      <td>$100.00</td>
-		                    </tr>
-		                    <tr>
-		                      <td class="text-black font-weight-bold"><strong>Cart Subtotal</strong></td>
-		                      <td class="text-black">$350.00</td>
-		                    </tr>
-		                    <tr>
-		                      <td class="text-black font-weight-bold"><strong>Order Total</strong></td>
-		                      <td class="text-black font-weight-bold"><strong>$350.00</strong></td>
+		                      <td class="text-black font-weight-bold"><strong>Sipariş Toplamı</strong></td>
+		                      <td class="text-black font-weight-bold"><strong>$75.00</strong></td>
 		                    </tr>
 		                  </tbody>
 		                </table>
 
 		                <div class="border p-3 mb-3">
-		                  <h3 class="h6 mb-0"><a class="d-block" data-bs-toggle="collapse" href="#collapsebank" role="button" aria-expanded="false" aria-controls="collapsebank">Direct Bank Transfer</a></h3>
+		                  <h3 class="h6 mb-0"><a class="d-block" data-bs-toggle="collapse" href="#collapsebank" role="button" aria-expanded="false" aria-controls="collapsebank">Banka Transferi</a></h3>
 
 		                  <div class="collapse" id="collapsebank">
 		                    <div class="py-2">
-		                      <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+		                      <p class="mb-0">Ödemenizi doğrudan banka hesabımıza yapın. Lütfen ödeme referansı olarak Sipariş Kimliğinizi kullanın. Ödemeniz hesabımıza geçene kadar siparişiniz sevk edilmeyecektir.</p>
 		                    </div>
 		                  </div>
 		                </div>
 
 		                <div class="border p-3 mb-3">
-		                  <h3 class="h6 mb-0"><a class="d-block" data-bs-toggle="collapse" href="#collapsecheque" role="button" aria-expanded="false" aria-controls="collapsecheque">Cheque Payment</a></h3>
+		                  <h3 class="h6 mb-0"><a class="d-block" data-bs-toggle="collapse" href="#collapsecheque" role="button" aria-expanded="false" aria-controls="collapsecheque">Çek Ödemesi</a></h3>
 
 		                  <div class="collapse" id="collapsecheque">
 		                    <div class="py-2">
-		                      <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+		                      <p class="mb-0">Ödemenizi doğrudan banka hesabımıza yapın. Lütfen ödeme referansı olarak Sipariş Kimliğinizi kullanın. Ödemeniz hesabımıza geçene kadar siparişiniz sevk edilmeyecektir.</p>
 		                    </div>
 		                  </div>
 		                </div>
@@ -272,13 +263,13 @@
 
 		                  <div class="collapse" id="collapsepaypal">
 		                    <div class="py-2">
-		                      <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+		                      <p class="mb-0">Ödemenizi doğrudan banka hesabımıza yapın. Lütfen ödeme referansı olarak Sipariş Kimliğinizi kullanın. Ödemeniz hesabımıza geçene kadar siparişiniz sevk edilmeyecektir.</p>
 		                    </div>
 		                  </div>
 		                </div>
 
 		                <div class="form-group">
-		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou.html'">Place Order</button>
+		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou.html'">Sipariş Ver</button>
 		                </div>
 
 		              </div>
