giriş sayfası eklendi

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -99,7 +99,7 @@
 
 				<div class="row mb-5">
 					<div class="col-lg-5 mx-auto text-center">
-						<h2 class="section-title">Our Team</h2>
+						<h2 class="section-title">Takımımız</h2>
 					</div>
 				</div>
 
@@ -151,7 +151,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">Testimonials</h2>
+						<h2 class="section-title">Görüş ve Referanslar</h2>
 					</div>
 				</div>
 
@@ -172,14 +172,14 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
 													<div class="author-pic">
 														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Meryem</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
@@ -202,7 +202,7 @@
 													<div class="author-pic">
 														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Bade</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
@@ -225,7 +225,7 @@
 													<div class="author-pic">
 														<img src="/images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">Selin</h3>
 													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
 												</div>
 											</div>
