--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -25,7 +25,7 @@
 
             <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="login">
                         <img src="/images/user.svg">
                     </a>
                 </li>
