--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
 						<h2 class="mb-4 section-title">En çok tercih edilen halı modelleri</h2>
 						<p class="mb-4">Klasik Anadolu tasarımından daha modern geometrik desenlere kadar birçok farklı Türk halıları...</p>
-						<p><a href="shop.html" class="btn">Daha fazla</a></p>
+						<p><a href="shop" class="btn">Daha fazla</a></p>
 					</div> 
 					<!-- End Column 1 -->
 
@@ -51,8 +51,8 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart">
 							<img src="/images/hali3.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Isparta Halıları</h3>
-							<strong class="product-price">$79.00</strong>
+							<h3 class="product-title">Bursa Halıları</h3>
+							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
 								<img src="/images/cross.svg" class="img-fluid">
@@ -65,8 +65,8 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart">
 							<img src="/images/hali5.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ardahan Halıları</h3>
-							<strong class="product-price">$66.00</strong>
+							<h3 class="product-title">Konya Halıları</h3>
+							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
 								<img src="/images/cross.svg" class="img-fluid">
@@ -79,8 +79,8 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart">
 							<img src="/images/hali6.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kayseri Halıları</h3>
-							<strong class="product-price">$43.00</strong>
+							<h3 class="product-title">Manisa Halıları</h3>
+							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
 								<img src="/images/cross.svg" class="img-fluid">
