--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -36,9 +36,13 @@
 							<h3 class="product-title">Konya Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
+							<form action="/cart" method="GET">
+								<button type="submit">
+								  <span class="icon-cross">
+									<img src="images/cross.svg" class="img-fluid">
+								  </span>
+								</button>
+							  </form>
 						</a>
 					</div> 
 					<!-- End Column 1 -->
@@ -50,9 +54,13 @@
 							<h3 class="product-title">Bursa Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
+							<form action="/cart" method="GET">
+								<button type="submit">
+								  <span class="icon-cross">
+									<img src="images/cross.svg" class="img-fluid">
+								  </span>
+								</button>
+							  </form>
 						</a>
 					</div> 
 					<!-- End Column 2 -->
