--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,5 +12,5 @@
           <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
           <link href="/css/tiny-slider.css" rel="stylesheet">
           <link href="/css/style.css" rel="stylesheet">
-          
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       </head>
